--- a/lang/ru.json
+++ b/lang/ru.json
@@ -101,6 +101,7 @@
         "total": "Всего",
         "left": "осталось",
         "close": "Закрыть",
+        "apply": "Применить",
         "toChat": "В Чат",
         "effect": "Эффект",
         "simple": "Простое",
@@ -186,9 +187,12 @@
         "fullDefenseRollFailed": "Не удалось выполнить бросок Полной Обороны. Пожалуйста, бросьте вручную.",
         "invalidRingForSpell": "Неверное кольцо для ячейки заклинаний: {ring}",
         "noActorForVoid": "Нет доступного актера для траты очков Пустоты",
+        "chatMessageFailed": "Не удалось опубликовать бросок в чате - см. консоль для подробностей",
         "deleteEffect": "Не удалось удалить эффект.",
         "schoolRankZero": "Нельзя колдовать при Ранге Школы, сниженном до нуля",
-        "noSpellSlots": "У вас закончились ячейки заклинаний для этого кольца"
+        "noSpellSlots": "У вас закончились ячейки заклинаний для этого кольца",
+        "woundConfigFailed": "Не удалось открыть конфигурацию ран",
+        "woundConfigUpdateFailed": "Не удалось обновить конфигурацию ран"
       },
       "chat": {
         "traitRoll": "Бросок Характеристики {trait}",
@@ -449,6 +453,18 @@
     "forceMigration": {
       "name": "Принудительно мигрировать при старте",
       "label": "Принуждает все миграции выполниться при следующей загрузке мира вне зависимости от версии. Автоматически сбрасывается после завершения."
+    },
+    "defaultNpcWoundMode": {
+      "name": "Режим Ран по Умолчанию для НИП",
+      "label": "Определяет, используют ли новые НИП расчеты на основе формулы (Кольцо Земли) или ручной ввод порогов для расчета ран. Существующие НИП сохраняют свои индивидуальные настройки.",
+      "choices": {
+        "manual": "Ручной (Прямой Ввод)",
+        "formula": "Формула (На Основе Земли)"
+      }
+    },
+    "debugWoundConfig": {
+      "name": "Отладка Конфигурации Ран",
+      "label": "Включает подробную запись в консоль для взаимодействий Приложения Конфигурации Ран, обработки событий и обновлений актёров. Полезно для устранения проблем с ответами форм."
     }
   },
   "EFFECT": {
