feat: Add Recalculate Purchase XP button to XP Manager
- Add icon button to XP Manager Purchases section
- Implement recalculate handler that forces retroactive XP update
- Add localization strings for tooltip and notifications
- Follows L5R4 patterns: data-action delegation, defensive coding
- Leverages existing _retroactivelyUpdateXP() method

--- a/lang/en.json
+++ b/lang/en.json
@@ -320,6 +320,9 @@
         "voidChange": "Void {from}→{to}",
         "skillCreate": "{name} 0→{rank}",
         "skillChange": "{name} {from}→{to}",
+        "recalculateTooltip": "Recalculate XP purchases from current character state",
+        "recalculateSuccess": "XP purchases recalculated successfully",
+        "recalculateFailed": "Failed to recalculate XP purchases",
         "breakdown": {
           "base": "Base",
           "disadvantagesGrant": "Disadvantages",
